--- a/package.json
+++ b/package.json
@@ -31,46 +31,57 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/prettier": "^2.4.1",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "axios-mock-adapter": "^1.20.0",
-    "chalk": "^4.1.2",
+    "@types/jest": "^29.5.11",
+    "@types/prettier": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "axios-mock-adapter": "^1.22.0",
+    "chalk": "^5.3.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-yoctol": "^0.26.3",
     "eslint-config-yoctol-base": "^0.24.2",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.25.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "eslint-plugin-tsdoc": "^0.2.14",
-    "glob": "^7.2.0",
-    "husky": "^7.0.2",
-    "jest": "^27.2.4",
-    "jest-junit": "^12.3.0",
-    "lerna": "^3.22.1",
-    "lint-staged": "^11.1.2",
-    "micromatch": "^4.0.4",
-    "mkdirp": "^1.0.4",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "glob": "^10.3.10",
+    "husky": "^9.0.6",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "lerna": "^8.0.2",
+    "lint-staged": "^15.2.0",
+    "micromatch": "^4.0.5",
+    "mkdirp": "^3.0.1",
     "mockdate": "^3.0.5",
-    "nock": "^13.1.3",
+    "nock": "^13.5.1",
     "once": "^1.4.0",
-    "prettier": "^2.4.1",
-    "prettier-package-json": "^2.6.0",
-    "rimraf": "^3.0.2",
-    "supertest": "^6.1.6",
-    "ts-jest": "^27.0.5",
-    "typescript": "^3.9.6"
+    "prettier": "^3.2.4",
+    "prettier-package-json": "^2.8.0",
+    "rimraf": "^5.0.5",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=8"
+  },
+  "packageManager": "yarn@4.0.2",
+  "resolutions": {
+    "axios-error": "portal:/Users/marosvarchola/Programming/sunray/gits/messaging-apis-custom/packages/axios-error",
+    "facebook-batch": "portal:/Users/marosvarchola/Programming/sunray/gits/messaging-apis-custom/packages/facebook-batch",
+    "messaging-api-common": "portal:/Users/marosvarchola/Programming/sunray/gits/messaging-apis-custom/packages/messaging-api-common",
+    "messaging-api-line": "portal:/Users/marosvarchola/Programming/sunray/gits/messaging-apis-custom/packages/messaging-api-line",
+    "messaging-api-messenger": "portal:/Users/marosvarchola/Programming/sunray/gits/messaging-apis-custom/packages/messaging-api-messenger",
+    "messaging-api-slack": "portal:/Users/marosvarchola/Programming/sunray/gits/messaging-apis-custom/packages/messaging-api-slack",
+    "messaging-api-telegram": "portal:/Users/marosvarchola/Programming/sunray/gits/messaging-apis-custom/packages/messaging-api-telegram",
+    "messaging-api-viber": "portal:/Users/marosvarchola/Programming/sunray/gits/messaging-apis-custom/packages/messaging-api-viber",
+    "messaging-api-wechat": "portal:/Users/marosvarchola/Programming/sunray/gits/messaging-apis-custom/packages/messaging-api-wechat"
   }
 }
