--- a/packages/bottender/package.json
+++ b/packages/bottender/package.json
@@ -25,68 +25,68 @@
   "dependencies": {
     "@bottender/express": "^1.5.1",
     "@bottender/jfs": "^0.4.1",
-    "@hapi/joi": "^15.1.1",
-    "@slack/rtm-api": "^5.0.3",
-    "@types/debug": "^4.1.7",
-    "@types/express": "4.17.2",
-    "@types/fs-extra": "^8.1.0",
-    "@types/hapi__joi": "^15.0.4",
-    "@types/invariant": "^2.2.35",
-    "@types/ioredis": "^4.27.5",
-    "@types/jsonfile": "^6.0.1",
-    "@types/lodash": "^4.14.175",
-    "@types/lru-cache": "^5.1.1",
-    "@types/mongodb": "^3.3.16",
-    "@types/object.fromentries": "^2.0.1",
-    "@types/shortid": "^0.0.29",
-    "@types/update-notifier": "^5.1.0",
-    "@types/warning": "^3.0.0",
-    "arg": "^5.0.1",
-    "axios": "^0.21.4",
+    "@hapi/joi": "^17.1.1",
+    "@slack/rtm-api": "^6.2.1",
+    "@types/debug": "^4.1.12",
+    "@types/express": "4.17.21",
+    "@types/fs-extra": "^11.0.4",
+    "@types/hapi__joi": "^17.1.14",
+    "@types/invariant": "^2.2.37",
+    "@types/ioredis": "^5.0.0",
+    "@types/jsonfile": "^6.1.4",
+    "@types/lodash": "^4.14.202",
+    "@types/lru-cache": "^7.10.10",
+    "@types/mongodb": "^4.0.7",
+    "@types/object.fromentries": "^2.0.4",
+    "@types/shortid": "^0.0.32",
+    "@types/update-notifier": "^6.0.8",
+    "@types/warning": "^3.0.3",
+    "arg": "^5.0.2",
+    "axios": "^1.6.7",
     "axios-error": "^1.0.4",
-    "body-parser": "^1.19.0",
-    "chalk": "~2.4.2",
-    "cli-table3": "^0.6.0",
-    "date-fns": "^2.24.0",
-    "debug": "^4.3.2",
-    "deep-object-diff": "^1.1.0",
-    "delay": "^5.0.0",
-    "dotenv": "^10.0.0",
-    "enquirer": "^2.3.6",
-    "express": "^4.17.1",
-    "facebook-batch": "1.0.6",
-    "figures": "^3.2.0",
-    "file-type": "^16.5.3",
-    "fs-extra": "^8.1.0",
-    "hasha": "^5.2.2",
+    "body-parser": "^1.20.2",
+    "chalk": "~5.3.0",
+    "change-case": "^5.4.2",
+    "cli-table3": "^0.6.3",
+    "date-fns": "^3.3.1",
+    "debug": "^4.3.4",
+    "deep-object-diff": "^1.1.9",
+    "delay": "^6.0.0",
+    "dotenv": "^16.4.1",
+    "enquirer": "^2.4.1",
+    "express": "^4.18.2",
+    "facebook-batch": "1.1.0",
+    "figures": "^6.0.1",
+    "file-type": "^19.0.0",
+    "fs-extra": "^11.2.0",
+    "hasha": "^6.0.0",
     "import-fresh": "^3.3.0",
     "invariant": "^2.2.4",
-    "ioredis": "^4.27.9",
+    "ioredis": "^5.3.2",
     "jsonfile": "^6.1.0",
     "lodash": "^4.17.21",
-    "lru-cache": "^6.0.0",
+    "lru-cache": "^10.2.0",
     "messaging-api-common": "1.0.4",
-    "messaging-api-line": "1.0.6",
-    "messaging-api-messenger": "1.0.6",
-    "messaging-api-slack": "1.0.6",
-    "messaging-api-telegram": "1.0.6",
-    "messaging-api-viber": "1.0.6",
-    "minimist": "^1.2.5",
-    "mongodb": "^3.7.0",
-    "ngrok": "^3.4.1",
-    "nodemon": "^2.0.13",
-    "object.fromentries": "^2.0.4",
-    "p-map": "^4.0.0",
-    "p-props": "^4.0.0",
-    "pascal-case": "^3.1.2",
-    "path-to-regexp": "^6.2.0",
-    "pkg-dir": "^5.0.0",
-    "read-chunk": "^3.2.0",
+    "messaging-api-line": "1.1.0",
+    "messaging-api-messenger": "1.1.0",
+    "messaging-api-slack": "1.1.0",
+    "messaging-api-telegram": "1.1.0",
+    "messaging-api-viber": "1.1.0",
+    "minimist": "^1.2.8",
+    "mongodb": "^6.3.0",
+    "ngrok": "^5.0.0-beta.2",
+    "nodemon": "^3.0.3",
+    "object.fromentries": "^2.0.7",
+    "p-map": "^7.0.1",
+    "p-props": "^6.0.0",
+    "path-to-regexp": "^6.2.1",
+    "pkg-dir": "^8.0.0",
+    "read-chunk": "^4.0.3",
     "readline": "^1.3.0",
-    "recursive-readdir": "^2.2.2",
+    "recursive-readdir": "^2.2.3",
     "shortid": "^2.2.16",
-    "type-fest": "^1.4.0",
-    "update-notifier": "^5.1.0",
+    "type-fest": "4.7.1",
+    "update-notifier": "^7.0.0",
     "warning": "^4.0.3"
   },
   "keywords": [
