--- a/packages/create-bottender-app/package.json
+++ b/packages/create-bottender-app/package.json
@@ -1,9 +1,7 @@
 {
   "name": "create-bottender-app",
   "version": "1.5.2",
-  "bin": {
-    "create-bottender-app": "bin/cli.js"
-  },
+  "bin": "bin/cli.js",
   "files": [
     "dist",
     "template",
@@ -11,19 +9,19 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@types/cross-spawn": "^6.0.2",
+    "@types/cross-spawn": "^6.0.6",
     "@types/figures": "^3.0.1",
-    "@types/fs-extra": "^9.0.13",
-    "@types/inquirer": "^7.3.3",
-    "@types/node": "^16.10.2",
-    "chalk": "^4.1.2",
-    "commander": "^4.1.1",
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^20.11.10",
+    "chalk": "^5.3.0",
+    "commander": "^11.1.0",
     "cross-spawn": "^7.0.3",
-    "envinfo": "^7.8.1",
-    "figures": "^3.0.0",
-    "fs-extra": "^9.1.0",
-    "inquirer": "^8.1.5",
-    "prettier": "^2.4.1",
-    "validate-npm-package-name": "^3.0.0"
+    "envinfo": "^7.11.0",
+    "figures": "^6.0.1",
+    "fs-extra": "^11.2.0",
+    "inquirer": "^9.2.13",
+    "prettier": "^3.2.4",
+    "validate-npm-package-name": "^5.0.0"
   }
 }
