--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "composite": true,
-    "target": "es2016",
-    "module": "commonjs",
+    "target": "es2020",
+    "module": "ESNext",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
