--- a/packages/bottender-express/package.json
+++ b/packages/bottender-express/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.1",
   "license": "MIT",
   "homepage": "https://bottender.js.org/",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/Yoctol/bottender.git"
