--- a/packages/bottender/package.json
+++ b/packages/bottender/package.json
@@ -4,6 +4,7 @@
   "description": "A framework for building conversational user interfaces.",
   "license": "MIT",
   "homepage": "https://bottender.js.org/",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/Yoctol/bottender.git"
@@ -34,7 +35,7 @@
     "@types/invariant": "^2.2.37",
     "@types/ioredis": "^5.0.0",
     "@types/jsonfile": "^6.1.4",
-    "@types/lodash": "^4.14.202",
+    "@types/lodash-es": "^4.17.12",
     "@types/lru-cache": "^7.10.10",
     "@types/mongodb": "^4.0.7",
     "@types/object.fromentries": "^2.0.4",
@@ -64,7 +65,7 @@
     "invariant": "^2.2.4",
     "ioredis": "^5.3.2",
     "jsonfile": "^6.1.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lru-cache": "^10.2.0",
     "messaging-api-common": "1.0.4",
     "messaging-api-line": "1.1.0",
