--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "composite": true,
-    "target": "es2016",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "target": "es2020",
+    "module": "ESNext",
+    "moduleResolution": "Node10",
     "esModuleInterop": true,
     "sourceMap": true,
     "declaration": true,
@@ -20,7 +20,7 @@
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["es2017", "esnext.asynciterable"],
+    "lib": ["es2020", "esnext.asynciterable"],
     "types": ["node"],
     "baseUrl": ".",
     "paths": {
