fix: fixed some linting errors

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "compile:clean": "tsc --build tsconfig.build.json --clean",
     "postinstall": "yarn compile",
     "lint": "eslint packages examples --ext=js,ts",
-    "lint:fix": "yarn lint:fix:md && yarn lint --fix",
+    "lint:fix:ts": "yarn lint --fix",
     "lint:fix:md": "prettier --write **/*.md",
+    "lint:fix": "yarn lint:fix:md && yarn lint:fix:ts",
     "lint:staged": "lint-staged",
     "lint:website": "eslint website --ext=js,ts,tsx",
     "prepare": "husky",
