--- a/packages/bottender-rasa/package.json
+++ b/packages/bottender-rasa/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.202",
     "axios": "^1.6.7",
-    "lodash": "^4.17.21"
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
     "bottender": ">= 1.2.0-0"
