--- a/packages/bottender/package.json
+++ b/packages/bottender/package.json
@@ -54,7 +54,6 @@
     "deep-object-diff": "^1.1.9",
     "delay": "^6.0.0",
     "dotenv": "^16.4.1",
-    "enquirer": "^2.4.1",
     "express": "^4.18.2",
     "facebook-batch": "1.1.0",
     "figures": "^6.0.1",
@@ -62,6 +61,7 @@
     "fs-extra": "^11.2.0",
     "hasha": "^6.0.0",
     "import-fresh": "^3.3.0",
+    "inquirer": "^9.2.14",
     "invariant": "^2.2.4",
     "ioredis": "^5.3.2",
     "jsonfile": "^6.1.0",
@@ -89,6 +89,9 @@
     "type-fest": "4.7.1",
     "update-notifier": "^7.0.0",
     "warning": "^4.0.3"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^9"
   },
   "keywords": [
     "bot",
