--- a/packages/bottender/package.json
+++ b/packages/bottender/package.json
@@ -25,7 +25,6 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@bottender/express": "^1.5.1",
-    "@bottender/jfs": "^0.4.1",
     "@hapi/joi": "^17.1.1",
     "@slack/rtm-api": "^6.2.1",
     "@types/debug": "^4.1.12",
@@ -38,6 +37,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/lru-cache": "^7.10.10",
     "@types/mongodb": "^4.0.7",
+    "@types/node-persist": "^3.1.8",
     "@types/object.fromentries": "^2.0.4",
     "@types/shortid": "^0.0.32",
     "@types/update-notifier": "^6.0.8",
@@ -76,6 +76,7 @@
     "minimist": "^1.2.8",
     "mongodb": "^6.3.0",
     "ngrok": "^5.0.0-beta.2",
+    "node-persist": "^4.0.1",
     "nodemon": "^3.0.3",
     "object.fromentries": "^2.0.7",
     "p-map": "^7.0.1",
