--- a/packages/bottender-facebook/package.json
+++ b/packages/bottender-facebook/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "@bottender/facebook",
+  "name": "@sunray-eu/bottender-facebook",
   "version": "1.5.5",
   "license": "MIT",
   "homepage": "https://bottender.js.org/",
-  "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Yoctol/bottender.git"
+    "url": "https://github.com/sunray-eu/bottender-new.git",
+    "directory": "packages/bottender-facebook"
   },
+  "type": "module",
   "main": "dist/index.js",
   "files": [
     "dist"
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
+    "@sunray-eu/axios-error": "^1.2.0",
+    "@sunray-eu/facebook-batch": "^1.2.0",
     "@types/node-persist": "^3.1.8",
-    "axios-error": "^1.0.4",
-    "facebook-batch": "1.1.0",
     "lodash": "^4.17.21",
     "node-persist": "^4.0.1",
     "type-fest": "4.7.1",
     "warning": "^4.0.3"
   },
   "peerDependencies": {
-    "bottender": ">= 1.5.1-alpha.4"
+    "@sunray-eu/bottender": ">=1.5.5"
   },
   "devDependencies": {
-    "bottender": "^1.5.5"
+    "@sunray-eu/bottender": "^1.5.5"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   }
 }
