--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,8 @@
 nodeLinker: node-modules
+
+npmScopes:
+  sunray-eu:
+    npmAlwaysAuth: true
+    # npmAuthToken: "${NODE_AUTH_TOKEN}"
+    npmRegistryServer: "https://npm.pkg.github.com"
+    npmPublishRegistry: "https://npm.pkg.github.com"
