--- a/packages/bottender-handlers/package.json
+++ b/packages/bottender-handlers/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@bottender/handlers",
+  "name": "@sunray-eu/bottender-handlers",
   "version": "1.5.1",
   "license": "MIT",
   "homepage": "https://bottender.js.org/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Yoctol/bottender.git"
+    "url": "https://github.com/sunray-eu/bottender-new.git",
+    "directory": "packages/bottender-handlers"
   },
   "main": "dist/index.js",
   "files": [
@@ -17,5 +18,9 @@
     "@types/warning": "^3.0.3",
     "koa-compose": "^4.1.0",
     "warning": "^4.0.3"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   }
 }
