--- a/packages/bottender-qna-maker/package.json
+++ b/packages/bottender-qna-maker/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "@bottender/qna-maker",
+  "name": "@sunray-eu/bottender-qna-maker",
   "version": "1.5.5",
   "description": "QnA Maker integration for Bottender.",
   "license": "MIT",
   "homepage": "https://bottender.js.org/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Yoctol/bottender.git"
+    "url": "https://github.com/sunray-eu/bottender-new.git",
+    "directory": "packages/bottender-qna-maker"
   },
   "main": "dist/index.js",
   "files": [
@@ -18,10 +19,10 @@
     "invariant": "^2.2.4"
   },
   "peerDependencies": {
-    "bottender": ">= 1.2.0-0"
+    "@sunray-eu/bottender": ">=1.5.5"
   },
   "devDependencies": {
-    "bottender": "^1.5.5"
+    "@sunray-eu/bottender": "^1.5.5"
   },
   "keywords": [
     "bot",
@@ -32,5 +33,9 @@
     "nlu",
     "qna-maker",
     "understanding"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  }
 }
