--- a/packages/bottender/package.json
+++ b/packages/bottender/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "bottender",
+  "name": "@sunray-eu/bottender",
   "version": "1.5.5",
   "description": "A framework for building conversational user interfaces.",
   "license": "MIT",
   "homepage": "https://bottender.js.org/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Yoctol/bottender.git"
+    "url": "https://github.com/sunray-eu/bottender-new.git",
+    "directory": "packages/bottender"
   },
   "type": "module",
   "main": "dist/index.js",
@@ -27,6 +28,14 @@
     "@bottender/express": "^1.5.1",
     "@hapi/joi": "^17.1.1",
     "@slack/rtm-api": "^6.2.1",
+    "@sunray-eu/axios-error": "^1.2.0",
+    "@sunray-eu/facebook-batch": "^1.2.0",
+    "@sunray-eu/messaging-api-common": "^1.2.0",
+    "@sunray-eu/messaging-api-line": "^1.2.0",
+    "@sunray-eu/messaging-api-messenger": "^1.2.0",
+    "@sunray-eu/messaging-api-slack": "^1.2.0",
+    "@sunray-eu/messaging-api-telegram": "^1.2.0",
+    "@sunray-eu/messaging-api-viber": "^1.2.0",
     "@types/debug": "^4.1.12",
     "@types/express": "4.17.21",
     "@types/fs-extra": "^11.0.4",
@@ -43,11 +52,10 @@
     "@types/update-notifier": "^6.0.8",
     "@types/warning": "^3.0.3",
     "arg": "^5.0.2",
-    "axios": "^1.6.7",
-    "axios-error": "^1.0.4",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
-    "change-case": "^5.4.2",
+    "change-case": "^5.4.4",
     "cli-table3": "^0.6.3",
     "date-fns": "^3.3.1",
     "debug": "^4.3.4",
@@ -55,7 +63,6 @@
     "delay": "^6.0.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "facebook-batch": "1.1.0",
     "figures": "^6.0.1",
     "file-type": "^19.0.0",
     "fs-extra": "^11.2.0",
@@ -67,12 +74,6 @@
     "jsonfile": "^6.1.0",
     "lodash-es": "^4.17.21",
     "lru-cache": "^10.2.0",
-    "messaging-api-common": "1.0.4",
-    "messaging-api-line": "1.1.0",
-    "messaging-api-messenger": "1.1.0",
-    "messaging-api-slack": "1.1.0",
-    "messaging-api-telegram": "1.1.0",
-    "messaging-api-viber": "1.1.0",
     "minimist": "^1.2.8",
     "mongodb": "^6.3.0",
     "ngrok": "^5.0.0-beta.2",
@@ -107,5 +108,9 @@
   ],
   "engines": {
     "node": ">=8"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   }
 }
