--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,11 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
 
+      - name: Setup Latest Yarn
+        uses: threeal/setup-yarn-action@v2.0.0
+        with:
+          version: latest
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -39,12 +44,12 @@ jobs:
       - name: Install npm dependencies
         run: yarn --frozen-lockfile
 
-      - name: Compile TypeScript files
-        run: npm run compile
+      - name: Build TypeScript files
+        run: yarn build
 
       - name: Run lint rules
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: npm run lint
+        run: yarn lint
 
       - name: Install npm dependencies for website
         if: ${{ matrix.os == 'ubuntu-latest' }}
@@ -53,12 +58,12 @@ jobs:
 
       - name: Run lint rules for website
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: npm run lint:website
+        run: yarn lint:website
 
       - name: Run type check for website
         if: ${{ matrix.os == 'ubuntu-latest' }}
         working-directory: ./website
-        run: npm run type-check
+        run: yarn type-check
 
       # TODO: Fix tests
       # - name: Run tests
