--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,8 +36,11 @@ jobs:
         with:
           node-version-file: '.nvmrc'
 
-      - name: Install npm dependencies
+      - name: Install yarn dependencies
         run: yarn --frozen-lockfile
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build TypeScript files
         run: yarn build
