--- a/examples/custom-server-express-typescript/package.json
+++ b/examples/custom-server-express-typescript/package.json
@@ -5,8 +5,8 @@
     "start": "cross-env NODE_ENV=production node dist/server.js"
   },
   "dependencies": {
+    "@sunray-eu/bottender": "latest",
     "body-parser": "^1.19.0",
-    "bottender": "latest",
     "cross-env": "^6.0.3",
     "express": "^4.17.1"
   },
