--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "build": "tsc --build tsconfig.build.json",
     "build:clean": "tsc --build tsconfig.build.json --clean",
     "build:watch": "yarn build --watch",
+    "ci:release": "lerna publish from-package --yes",
+    "ci:versionup:major": "lerna version major --no-push --no-git-tag-version --yes && npm run commit-version",
+    "ci:versionup:minor": "lerna version minor --no-push --no-git-tag-version --yes && npm run commit-version",
+    "ci:versionup:patch": "lerna version patch --no-push --no-git-tag-version --yes && npm run commit-version",
     "clean": "git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./.yarn/install-state.gz",
+    "commit-version": "git add . && git commit -m \"chore(release): v`node -p 'require(\"./lerna.json\").version'`\"",
     "postinstall": "yarn build",
     "lint": "eslint packages examples --ext=js,ts",
     "lint:fix": "yarn lint:fix:md && yarn lint:fix:ts",
@@ -23,11 +28,13 @@
     "lint:staged": "lint-staged",
     "lint:website": "eslint website --ext=js,ts,tsx",
     "prepare": "husky",
+    "release": "lerna publish from-package",
     "test": "yarn build && yarn lint && yarn testonly",
     "testonly": "jest",
     "testonly:cov": "jest --coverage",
     "testonly:watch": "jest --watch",
-    "version": "cp README.md packages/bottender"
+    "version": "cp README.md packages/bottender",
+    "versionup": "yarn version && lerna version"
   },
   "workspaces": [
     "packages/*"
