--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,11 @@
 {
   "npmClient": "yarn",
-  "version": "1.5.5",
+  "version": "1.6.0",
   "command": {
     "publish": {
-      "ignoreChanges": ["__tests__/**"]
+      "ignoreChanges": [
+        "__tests__/**"
+      ]
     }
   },
   "$schema": "node_modules/lerna/schemas/lerna-schema.json"
