--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,10 +60,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Latest Yarn
-        uses: threeal/setup-yarn-action@v2.0.0
-        with:
-          version: latest
+
+      - name: Enable corepack
+        run: corepack enable yarn
+
+      - name: Setup latest yarn
+        run: yarn set version berry
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
