--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Add npmAuthToken to .yarnrc.yml
         run: yarn config set 'npmRegistries["//npm.pkg.github.com"].npmAuthToken' "${{ secrets.GITHUB_TOKEN }}"
       - name: Install
-        run: yarn install
+        run: yarn --frozen-lockfile
       - name: Checkout after auth and install
         run: git checkout .
 
