--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+        # Instal yarn berry
       - name: Enable corepack
         run: corepack enable yarn
 
