--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
 
+        # Instal yarn berry
       - name: Enable corepack
         run: corepack enable yarn
 
