--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -21,17 +21,35 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+
+      # Instal yarn berry
+      - name: Enable corepack
+        run: corepack enable yarn
+
+      - name: Setup latest yarn
+        run: yarn set version berry
+
+        # Auth process
+      - name: Add npmAuthToken to .yarnrc.yml
+        run: yarn config set 'npmRegistries["//npm.pkg.github.com"].npmAuthToken' "${{ secrets.GITHUB_TOKEN }}"
+      - name: Install
+        run: yarn --immutable
+      - name: Checkout after auth and install
+        run: git checkout .
+
       - name: Update Version
         run: |
           git config --global user.email "${GIT_AUTHOR_EMAIL}"
           git config --global user.name "${GIT_AUTHOR_NAME}"
-          npm run ci:versionup:${SEMVER} --yes
+          yarn ci:versionup:${SEMVER}
         env:
           SEMVER: ${{ github.event.inputs.semver }}
           GIT_AUTHOR_NAME: ${{ github.actor }}
           GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
+
       - name: Set PACKAGE_VERSION
         run: echo "PACKAGE_VERSION=$(cat lerna.json | jq -r .version)" >> $GITHUB_ENV
+
       - name: Set GitHub Release Note
         id: release_note
         uses: actions/github-script@v7
@@ -44,6 +62,7 @@ jobs:
         env:
           PACKAGE_VERSION: ${{ env.PACKAGE_VERSION }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v6
@@ -61,6 +80,7 @@ jobs:
           body: |
             ${{ steps.release_note.outputs.stdout }}
           labels: "Type: Release"
+
       - name: Check Pull Request
         run: |
           echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
