--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -14,6 +14,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  packages: read
 
 jobs:
   create-release-pr:
@@ -32,7 +33,7 @@ jobs:
         # Auth process
       - name: Add npmAuthToken to .yarnrc.yml
         run: yarn config set 'npmRegistries["//npm.pkg.github.com"].npmAuthToken' "${{ secrets.GITHUB_TOKEN }}"
-      - name: Install
+      - name: Install yarn dependencies
         run: yarn --immutable
       - name: Checkout after auth and install
         run: git checkout .
