--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "build:clean": "tsc --build tsconfig.build.json --clean",
     "build:watch": "yarn build --watch",
     "ci:release": "lerna publish from-package --yes",
-    "ci:versionup:major": "lerna version major --no-push --no-git-tag-version --yes && yarn commit-version",
-    "ci:versionup:minor": "lerna version minor --no-push --no-git-tag-version --yes && yarn commit-version",
-    "ci:versionup:patch": "lerna version patch --no-push --no-git-tag-version --yes && yarn commit-version",
+    "ci:versionup:major": "lerna version major --no-push --no-git-tag-version --yes",
+    "ci:versionup:minor": "lerna version minor --no-push --no-git-tag-version --yes",
+    "ci:versionup:patch": "lerna version patch --no-push --no-git-tag-version --yes",
     "clean": "git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./.yarn/install-state.gz",
-    "commit-version": "git add . && git commit -m \"chore(release): v`node -p 'require(\"./lerna.json\").version'`\"",
+    "commit-version": "git add . && git commit -m \"chore(release): v$(node -p 'require(\"./lerna.json\").version')\"",
     "postinstall": "yarn build",
     "lint": "eslint packages examples --ext=js,ts",
     "lint:fix": "yarn lint:fix:md && yarn lint:fix:ts",
