chore: corrected husky script

--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "ci:versionup:patch": "lerna version patch --no-push --no-git-tag-version --yes",
     "clean": "git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./.yarn/install-state.gz",
     "commit-version": "git add . && git commit -m \"chore(release): v$(node -p 'require(\"./lerna.json\").version')\"",
-    "postinstall": "yarn build",
+    "postinstall": "husky && yarn build",
     "lint": "eslint packages examples --ext=js,ts",
     "lint:fix": "yarn lint:fix:md && yarn lint:fix:ts",
     "lint:fix:md": "prettier --write **/*.md",
     "lint:fix:ts": "yarn lint --fix",
     "lint:staged": "lint-staged",
     "lint:website": "eslint website --ext=js,ts,tsx",
-    "prepare": "husky",
     "release": "lerna publish from-package",
     "test": "yarn build && yarn lint && yarn testonly",
     "testonly": "jest",
